Add new data, update metatags

--- a/cv/index.html
+++ b/cv/index.html
@@ -2,8 +2,25 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="/kambi.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Jan Wysmoliński - Portfolio CV. Zobacz moje projekty i doświadczenie zawodowe."
+        />
+        <meta name="author" content="Jan Wysmoliński" />
+        <meta
+            name="keywords"
+            content="portfolio, CV, developer, full-stack, devops, React, programista"
+        />
+        <meta property="og:title" content="Jan Wysmoliński - Portfolio CV" />
+        <meta
+            property="og:description"
+            content="Zapoznaj się z moimi projektami i doświadczeniem zawodowym."
+        />
+        <!-- <meta property="og:image" content="/preview-image.png" /> -->
+        <meta property="og:url" content="https://janwysmolinski.eu" />
+        <!-- Domain ^ set the right one -->
         <title>CV - Jan Wysmoliński</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
